WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160481
REGRESSION (
r203385
): Frequent RELEASE_ASSERT in WebKit::RemoteLayerTreeDrawingArea::flushLayers()
https://bugs.webkit.org/show_bug.cgi?id=160481
Summary
REGRESSION (r203385): Frequent RELEASE_ASSERT in WebKit::RemoteLayerTreeDrawi...
Tim Horton
Reported
2016-08-02 17:57:16 PDT
REGRESSION (
r203385
): Frequent RELEASE_ASSERT in WebKit::RemoteLayerTreeDrawingArea::flushLayers()
Attachments
Patch
(5.63 KB, patch)
2016-08-02 17:58 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-08-02 17:58:02 PDT
Created
attachment 285171
[details]
Patch
Tim Horton
Comment 2
2016-08-02 18:24:14 PDT
https://trac.webkit.org/changeset/204057
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug